2000-12-20  Philip Aston  <paston@beasys.com>

	* Grinder 0.9 is released.

2000-12-19  Philip Aston  <paston@beasys.com>

	* build.bat: 
	* build.sh:
	* etc/ant/ant.
		Dead, see README for new build instructions.
	
	* build.xml: 
		Moved from etc/build.xml.
	
	* src/net/grinder/engine/process/GrinderProcess.java:
		Reinstated data file title line.

	* README: 
		Extra documentation.		

	* CHANGES: 
		New.

	* src/net/grinder/engine/PropsLoader.java: 
		Removed.

	* src/net/grinder/Grinder.java: 
	* src/net/grinder/console/Console.java: 
	* src/net/grinder/console/MsgReader.java: 
	* src/net/grinder/engine/LauncherThread.java: 
	* src/net/grinder/util/GrinderProperties.java: 
		Use GrinderProperties.

2000-12-18  Philip Aston  <paston@beasys.com>

	* Grinder 0.8 is released.

	* build.xml:
		Don't delete the distribution jar in realclean target.
		Don't distribute setenv.sh.
		Change version.

	* README:
	* TODO:
		Latest hints
		Update for HTTPS support..

2000-12-18  Phil Dawes  <pdawes@beasys.com>
	
	* HttpsPlugin:
		HTTPS support.
	
2000-12-14  Phil Dawes  <pdawes@beasys.com>

	* src/net/grinder/plugin/http/HttpMsg.java:
		Stop URLConnection from handling http 302 forwards,
		because these contain the cookie when handling web app
		form based authentication.

2000-12-13  Philip Aston  <paston@beasys.com>

	* Grinder 0.7 is released.

	* All java files: 
		Alter the javadoc headers to use cvs info for @version.

	* build.bat: 
	* build.sh: 
	* etc/build.xml:
	* etc/javadoc.css:
	* etc/setenv.sh:
	* README:
		Use Ant to build everything.
	

2000-12-11  Philip Aston  <paston@beasys.com>

	* Grinder 0.6 is released.

	* GrinderProcess.java:
		Alter the message sent to the console.
	
	* MethodStatistics.java (getDelta): 
		Do the calculation the right way around.

	* Console.java:
	* GraphStatInfo.java:
	* MsgReader.java:
		Show all the methods in the method list. Remove bogus TPS,
		graph ART until I rework the TPS calculation.
